# containers.js

./: .babelrc  .coveralls.yml  .dockerignore  .eslintrc.js  .gitignore  .nycrc  .travis.yml  CHANGELOG.md  README.md  build_and_test.sh  build_wasm.py  dockerfile  package.json  requirements.txt  webpack.config.js
containers_wasm/: CMakeLists.txt
containers_wasm/cmake/: Emscripten.cmake
containers_wasm/src/: list.cpp  list.h  map.cpp  map.h
example/: main.js  package.json
lib/: extra-containers.js  extra-containers.js.map  extra-containers.min.js  wasm-containers.js  wasm-containers.wasm
src/: algorithm.js  index.js  list.js  sorted_array.js
test/: index.html  test_list.js  test_map.js  test_sorted_array.js
test/libs/: containers.js  containers.wasm
wasm-containers/: build_wasm.py  index.js  package.json
wasm-containers/include/wasm-containers/: list.h  map.h
wasm-containers/src/: list.cpp  map.cpp
wasm-containers/test/: index.html  test_map.js
wasm-containers/test/libs/: README.md  wasm-containers.js  wasm-containers.wasm
